-
Bug
-
Resolution: Done
-
P1: Critical
-
5.12
-
None
Changes to qdoc between 5.11 and 5.12 seem to have broken namespace docs:
http://doc-snapshots.qt.io/qt5-5.12/qt.html
The index file looks OK, but the namespace members do not appear in the output for obsolete members.
- is duplicated by
-
QTBUG-69942 Regression: Enums in global namespace not shown in html documentation
-
- Closed
-
- relates to
-
QTBUG-69484 Regression in QDoc: Types of function parameters, namespaces, are no longer links
-
- Closed
-
-
QTBUG-70231 Regression: QDoc no linger auto-links enumerations used in a function signature
-
- Closed
-
| For Gerrit Dashboard: QTBUG-70321 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 238763,3 | qdoc: Fix generation of namespace documentation | 5.12 | qt/qttools | Status: MERGED | +2 | 0 |
| 238973,2 | qdoc: Only list obsolete members in details section | 5.12 | qt/qttools | Status: MERGED | +2 | 0 |
| 238992,2 | qdoc: Don't list inherited members on obsolete members page | 5.12 | qt/qttools | Status: MERGED | +2 | 0 |